--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/validator": "^13.15.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   },
@@ -11,6 +12,8 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongodb": "^6.17.0",
-    "mongoose": "^8.15.2"
+    "mongoose": "^8.15.2",
+    "validator": "^13.15.15",
+    "zod": "^3.25.67"
   }
 }
